Bug 39432 - [4.4 Regression] gdb.base/store.exp failures
Summary: [4.4 Regression] gdb.base/store.exp failures
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: debug (show other bugs)
Version: 4.4.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks: 39914
  Show dependency treegraph
 
Reported: 2009-03-11 14:28 UTC by Jakub Jelinek
Modified: 2009-04-27 18:21 UTC (History)
3 users (show)

See Also:
Host:
Target: x86_64-linux
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jakub Jelinek 2009-03-11 14:28:27 UTC
Running ../../../gdb/testsuite/gdb.base/store.exp ...
FAIL: gdb.base/store.exp: upvar charest l; print old l, expecting -1 .*
FAIL: gdb.base/store.exp: upvar short l; print old l, expecting -1
FAIL: gdb.base/store.exp: upvar int l; print old l, expecting -1
FAIL: gdb.base/store.exp: upvar long l; print old l, expecting -1
FAIL: gdb.base/store.exp: upvar longest l; print old l, expecting -1
FAIL: gdb.base/store.exp: upvar doublest l; print old l, expecting -1

are new failures in gdb testsuite when compiled with 4.4 compared to store.c compiled with 4.3.x.  The difference seems to be introduced by IRA, when compiled with -fno-ira (when trunk still had that option) the test worked.

With the old RA, -g -O0 -dA -fverbose-asm compiled:
unsigned int foo (unsigned int, unsigned int);

unsigned int bar (register unsigned int a, register unsigned int b)
{
  register unsigned int c = a, d = b;
  c = foo (c, d);
  return c + d;
}

d is allocated in a call-saved register (%ebx), which is fine and c is assigned a stack slot.  With IRA d is still allocated in %ebx, but c is in %eax, call-clobbered register.  So when gdb in the foo call does up and checks the value in c and d, it finds correct value of d, but garbage in c.

Could we perhaps at -O0 avoid allocating user variables that are live accross function calls in call-clobbered registers?  For -O1 it is obviously a fine decision.
Comment 1 Vladimir Makarov 2009-03-11 16:57:27 UTC
Jakub, how is about the following patch.  Is it ok for you?  I mean correct user variable identification.

2009-03-11  Vladimir Makarov  <vmakarov@redhat.com>

	PR debug/39432
	* ira-int.h (struct allocno): Fix comment for calls_crossed_num.
	* ira-conflicts.c (ira_build_conflicts): Prohibit call used
	registers for allocnos created from user-defined variables.

Index: ira-int.h
===================================================================
--- ira-int.h	(revision 144543)
+++ ira-int.h	(working copy)
@@ -333,7 +333,7 @@ struct ira_allocno
   /* Accumulated frequency of calls which given allocno
      intersects.  */
   int call_freq;
-  /* Length of the previous array (number of the intersected calls).  */
+  /* Accumulated number of the intersected calls.  */
   int calls_crossed_num;
   /* Non NULL if we remove restoring value from given allocno to
      MEM_OPTIMIZED_DEST at loop exit (see ira-emit.c) because the
Index: ira-conflicts.c
===================================================================
--- ira-conflicts.c	(revision 144543)
+++ ira-conflicts.c	(working copy)
@@ -800,29 +800,33 @@ ira_build_conflicts (void)
     }
   FOR_EACH_ALLOCNO (a, ai)
     {
-      if (ALLOCNO_CALLS_CROSSED_NUM (a) == 0)
-	continue;
-      if (! flag_caller_saves)
+      reg_attrs *attrs;
+      tree decl;
+
+      if ((! flag_caller_saves && ALLOCNO_CALLS_CROSSED_NUM (a) != 0)
+	  /* For debugging purposes don't put user defined variables in
+	     callee-clobbered registers.  */
+	  || (optimize <= 1
+	      && (attrs = REG_ATTRS (regno_reg_rtx [ALLOCNO_REGNO (a)])) != NULL
+	      && (decl = attrs->decl) != NULL
+	      && VAR_OR_FUNCTION_DECL_P (decl)
+	      && DECL_NAME (decl) != NULL))
 	{
 	  IOR_HARD_REG_SET (ALLOCNO_TOTAL_CONFLICT_HARD_REGS (a),
 			    call_used_reg_set);
-	  if (ALLOCNO_CALLS_CROSSED_NUM (a) != 0)
-	    IOR_HARD_REG_SET (ALLOCNO_CONFLICT_HARD_REGS (a),
-			      call_used_reg_set);
+	  IOR_HARD_REG_SET (ALLOCNO_CONFLICT_HARD_REGS (a),
+			    call_used_reg_set);
 	}
-      else
+      else if (ALLOCNO_CALLS_CROSSED_NUM (a) != 0)
 	{
 	  IOR_HARD_REG_SET (ALLOCNO_TOTAL_CONFLICT_HARD_REGS (a),
 			    no_caller_save_reg_set);
 	  IOR_HARD_REG_SET (ALLOCNO_TOTAL_CONFLICT_HARD_REGS (a),
 			    temp_hard_reg_set);
-	  if (ALLOCNO_CALLS_CROSSED_NUM (a) != 0)
-	    {
-	      IOR_HARD_REG_SET (ALLOCNO_CONFLICT_HARD_REGS (a),
-				no_caller_save_reg_set);
-	      IOR_HARD_REG_SET (ALLOCNO_CONFLICT_HARD_REGS (a),
-				temp_hard_reg_set);
-	    }
+	  IOR_HARD_REG_SET (ALLOCNO_CONFLICT_HARD_REGS (a),
+			    no_caller_save_reg_set);
+	  IOR_HARD_REG_SET (ALLOCNO_CONFLICT_HARD_REGS (a),
+			    temp_hard_reg_set);
 	}
     }
   if (optimize && ira_conflicts_p

 
Comment 2 Richard Biener 2009-03-11 17:02:12 UTC
You should use DECL_ARTIFICIAL I think.
Comment 3 Vladimir Makarov 2009-03-11 17:10:50 UTC
Thanks, Richard.

So instead of "DECL_NAME (decl) != NULL" I should use "! DECL_ARTIFICIAL (decl)".  Right?

Ok, I'll test the new patch then and send it for approval after testing.
Comment 4 Jakub Jelinek 2009-03-11 17:11:49 UTC
Also perhaps should test DECL_HARD_REGISTER, for DECL_HARD_REGISTER we shouldn't limit them in any way to allow the user to shoot himself.

In any case, I'll test your patch momentarily.
Comment 5 Vladimir Makarov 2009-03-11 17:28:34 UTC
As for DECL_HARD_REGISTER, such decl regs are never considered by IRA for allocation.   So I think there is no necessity to check them here.
Comment 6 Jakub Jelinek 2009-03-11 19:38:41 UTC
I can confirm that trunk with the #c1 patch modified as mentioned in #c3 cures all the gdb.base/store.exp failures.
Comment 7 Vladimir Makarov 2009-03-12 14:40:18 UTC
Subject: Bug 39432

Author: vmakarov
Date: Thu Mar 12 14:39:55 2009
New Revision: 144812

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=144812
Log:
2009-03-12  Vladimir Makarov  <vmakarov@redhat.com>

	PR debug/39432
	* ira-int.h (struct allocno): Fix comment for calls_crossed_num.
	* ira-conflicts.c (ira_build_conflicts): Prohibit call used
	registers for allocnos created from user-defined variables.


Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/ira-conflicts.c
    trunk/gcc/ira-int.h

Comment 8 Jakub Jelinek 2009-03-12 15:49:11 UTC
Fixed, thanks.