2009-03-12  Vladimir Makarov  <vmakarov@redhat.com>

PR debug/39432
	* ira-int.h (struct allocno): Fix comment for calls_crossed_num.
	* ira-conflicts.c (ira_build_conflicts): Prohibit call used
	registers for allocnos created from user-defined variables.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@144812 138bc75d-0d04-0410-961f-82ee72b054a4